fix input field alignment

--- a/style-css.css
+++ b/style-css.css
@@ -7,18 +7,6 @@ h1 {
   text-align: center;
 }
 
-h2 {
-  text-align: left;
-}
-
-h3 {
-  text-align: right;
-}
-
-form {
-  text-align: left;
-}
-
 input {
   width: 20%;
   padding: 12px 20px;
@@ -27,6 +15,41 @@ input {
   height: 8px;
 }
 
-#emailadd {
-  text-align: right;
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
+
+.noBullets {
+  list-style-type: none;
+}
+
+button {
+  position: center;
 }
